--- a/src/components/terminal.scss
+++ b/src/components/terminal.scss
@@ -30,7 +30,7 @@
   @media only screen and (max-width: $tablet) {
     width: auto;
     max-width: inherit;
-    background: lighten($terminalBackground, 5%);
+    background: lighten($terminalBackground, 2%);
   }
 
   .terminal-header {
