--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -46,6 +46,7 @@
 .mini-links {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 
   li {
     padding: .5em;
